[package]
name = "sussy_summarizer_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.117"